# feup-aed

./: CMakeLists.txt  README.md  main.cpp
docs/: Doxygen
docs/output/html/: _b_s_t_8h_source.html  _class_8h_source.html  _manager_8h_source.html  _menu_8h_source.html  _request_8h_source.html  _slot_8h_source.html  _student_8h_source.html  _uc_8h_source.html  _utility_8h_source.html  annotated.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_binary_node-members.html  class_binary_node.html  class_class-members.html  class_class.html  class_manager-members.html  class_manager.html  class_menu-members.html  class_menu.html  class_request-members.html  class_request.html  class_slot-members.html  class_slot.html  class_student-members.html  class_student.html  class_uc-members.html  class_uc.html  class_utility-members.html  class_utility.html  classes.html  classiterator_b_s_t-members.html  (+9 more)
docs/output/latex/: _manager_8h_source.tex  annotated.tex  class_b_s_t.tex  class_b_s_t_itr_in.tex  class_b_s_t_itr_level.tex  class_b_s_t_itr_post.tex  files.tex  (+14 more)
src/: BST.h  Class.cpp  Class.h  Manager.cpp  Manager.h  Menu.cpp  Menu.h  Request.cpp  Request.h  Slot.cpp  Slot.h  Student.cpp  Student.h  Turma.cpp  Turma.h  Uc.cpp  Uc.h  Utilities.cpp  Utilities.h  Utility.cpp  Utility.h  uc.cpp  uc.h
src/schedule/: students_classes.csv
(+36 files in other folders)
